cmake_minimum_required(VERSION 3.17)
project(elab)

set(CMAKE_CXX_STANDARD 14)
#
#add_executable(elab
#        "cpe c++/dan_chain.cpp")

add_executable(elab
        "Final/final63_necklaces.cpp")

#add_executable(elab
#        Broken_keyboard.cpp)
#        ant_first.cpp
#        atlab1.cpp
#        basic_pointer1.cpp
#        Binary.cpp
#        Bubblesort.cpp
#        close_enough.cpp
#        first_npsk.cpp
#        highes_hp2.cpp
#        insertion_sort.cpp
#        linklist.cpp
#        list_append_and_find.cpp
#        List_node1.cpp
#        List_node2.cpp
#        mid59_last.cpp
#        mid61_exp.cpp
#        mid_bucket.cpp
#        mid_practice_ant.cpp
#        mid_practice_tretis.cpp
#        mid_primefactors.cpp
#        nextprime.cpp
#        normalize.cpp
#        palindrome.cpp
#        selection_sort.cpp
#        split.cpp
#        Tall.cpp
#        testt.cpp
#        trucks.cpp
#        zouma1.cpp
